# user-analytics-ml-system

./: .gitignore  README.md  alembic.ini  app.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 28475abdddf4_update_user_schema.py  6ab863e220d7_update_user_schema.py  8054d0601c84_update_user_schema.py  97064f6fdfc6_update_user_schema.py  a9842d41bf6b_update_the_table.py  b46436724b1f_added_retraining_logs.py
app/: config.py  main.py
app/auth/: auth_api.py  auth_dependency.py  service.py  utils.py
app/db/: database.py  models.py
app/feedback/: feedback_utils.py  positive_feedback.py  service.py
app/model/: add_data.py  model.py
app/model/utils/: cleaning.py  hyper_parameter.py  report.py
app/prediction/: precdict.py  predict.py  save_prediction.py  service.py
app/router/: admin_api.py  auth_api.py  model_api.py  user_api.py
app/schema/: auth_schema.py  feedback_schema.py  model_schema.py
notebook/: data.ipynb  data2.ipynb  eda.ipynb  test_models.ipynb  xg_boost.ipynb
